Cleaning option settings - upgrade to version 0.0.2

--- a/config/simpleviewer_config.ini
+++ b/config/simpleviewer_config.ini
@@ -5,6 +5,43 @@
 ;; and "%stack_name:entry_name%" to copy the value of another configuration entry from another stack entry.
 ;; To insert a full stack (as an array) use a notation like "{stack_name}".
 
+[galleries]
+galleries_dir=galleries
+titles=%galleries_titles%
+images_dirname=images
+originals_dirname=images
+thumbs_dirname=thumbs
+boxgrid_image_filename=boxgrid.png
+
 [simple_viewer]
 multipage=true
 pagelimit=50
+
+[galleries_titles]
+mairie="Mairie"
+mairie/mairie\.mp4="Mariage à la mairie"
+eglise="Église"
+eglise/entree="Entrée"
+eglise/avant-echange="Avant échange"
+eglise/echange="Échange des consentements et alliances"
+eglise/priere="Prière des époux"
+eglise/apres-priere="Après prière"
+eglise/sortie="Signature et sortie"
+eglise/1_debut_ceremonie\.mp4="Début de la cérémonie"
+eglise/2_textes_parole_dieu\.mp4="Textes de la parole de Dieu"
+eglise/3_homelie_jeanmarie\.mp4="L'homélie de Jean-Marie"
+eglise/4_echange\.mp4="Echange des consentements et priére des époux"
+eglise/5_signatures_sortie\.mp4="Signatures et sortie"
+soiree="Soirée"
+soiree/apero="Arrivée et apéro"
+soiree/table="À table"
+soiree/lanternes="Les lanternes"
+soiree/danse="Soirée dansante"
+soiree/bref\.mp4="Bref, on va se marier"
+soiree/discours\.mp4="Le discours"
+soiree/lanternes\.mp4="Les lanternes"
+soiree/ouverture\.mp4="Ouverture du bal"
+dimanche="Dimanche"
+dimanche/enfant="Enfants"
+dimanche/interieur="Intérieur"
+dimanche/exterieur="Extérieur"
