Special "cb_wip" research branch

--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,7 @@
     "require": {
         "atelierspierrot/patterns": "dev-master",
         "atelierspierrot/library": "dev-master",
-        "carte-blanche/core": "~0.1"
-    },
-    "require-dev": {
-        "carte-blanche/core": "~0.1@dev"
+        "carte-blanche/core": "dev-cb_wip"
     },
     "autoload": { 
         "psr-0": { "SimpleViewer": "src" },
